--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@hookform/resolvers": "^3.1.1",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.6",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "react": "^18.2.0",
@@ -16,13 +16,17 @@
     "react-bootstrap-accordion": "^1.0.0",
     "react-dom": "^18.2.0",
     "react-gauge-chart": "^0.4.1",
+    "react-hook-form": "^7.45.0",
     "react-icons": "^4.7.1",
+    "react-password-strength-bar": "^0.4.1",
     "react-pro-sidebar": "^1.0.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^9.1.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0",
+    "zxcvbn": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^14.0.0"
   }
 }
