--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap-accordion": "^1.0.0",
     "react-dom": "^18.2.0",
     "react-gauge-chart": "^0.4.1",
+    "react-heatmap-grid": "^0.9.0",
     "react-icons": "^4.7.1",
     "react-pro-sidebar": "^1.0.0",
     "react-router-dom": "^6.10.0",
