--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@uiw/react-heat-map": "^2.0.5",
     "axios": "^1.3.4",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-bootstrap-accordion": "^1.0.0",
